--- a/index.html
+++ b/index.html
@@ -836,8 +836,8 @@
                                                                     
                                                                 </div>
                                                             </div>
-                                                            <p class="description" style="text-align: justify;">• Initiated and implemented a Retrieval-Augmented Generation (RAG) pipeline using FAISS Vector Search,LLMs and MySQL, improving retrieval accuracy by 30% in real-time. 
-                                                                <br>• Programmed a scalable dual-response AI system and reduced query time by 40% for semantic search. Collaborated with backend and leadership to deliver a production-ready AI integration plan, accelerating development by 25%.</p>
+                                                            <p class="description" style="text-align: justify;">• Built a high-throughput RAG pipeline using FAISS vector search, LLM inference, MySQL-backed metadata storage, and ETL workflows processing 500K+ documents daily; improved retrieval accuracy by 30%.
+                                                                <br>• Architected a dual-response semantic search system with in-memory + DB caching, conducted A/B testing on retrieval strategies, reducing query latency by 40% (800ms → 480ms) and increasing throughput by 25%.</p>
                                                         </div>
                                                     </div>
                                                     <!-- End Single List  -->
