--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
                                                             <div class="heading">
                                                                 <div class="title">
                                                                     <h4>AI ENGINEER</h4>
-                                                                    <span>Creating Wings Co. — San Jose, US ( MAY 2025 - AUGUST 2025 )</span>
+                                                                    <span>Creating Wings Co. — Connecticut, US ( MAY 2025 - AUGUST 2025 )</span>
                                                                 </div>
                                                                 <div class="date-of-time">
                                                                     
